[tool.poetry]
name = "gpa-backend"
version = "0.1.0"
description = "GPA Selfcalre API"
authors = ["Developers League"]
license = "Proprietory"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anyio = "3.6.2"
certifi = "2023.5.7"
click = "8.1.3"
exceptiongroup = "1.1.1"
fastapi = "0.95.2"
h11 = "0.14.0"
httpcore = "0.17.2"
httpx = "0.24.1"
idna = "3.4"
iniconfig = "2.0.0"
packaging = "23.1"
pluggy = "1.0.0"
pydantic = "1.10.7"
pytest = "7.3.1"
sniffio = "1.3.0"
starlette = "0.27.0"
tomli = "2.0.1"
typing-extensions = "4.5.0"
uvicorn = "0.22.0"
flake8 = "^6.0.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

